--- a/contract_management.html
+++ b/contract_management.html
@@ -10,7 +10,8 @@
 <div class="header">
     <div class="wrapper">
         <div class="loginLeft">
-            <span id="login">FeiLong100.com</span>
+            <span id="login">"xuedan100.com"</span>
+            <span id="log_state">[退出]</span>
             <span id="loginHi">您好,欢迎来到飞龙签约平台</span>
         </div>
     </div>
@@ -26,7 +27,132 @@
 </div>
 <div class="main">
     <div class="wrapper">
-        <h2>签约文档与上传</h2>
+        <div class="content_header">
+            <h2>合同管理</h2>
+            <ul id="tag" class="fn-clear">
+                <li class="tag_current">全部合同</li>
+                <li>已签署合同</li>
+                <li>未签署同</li>
+            </ul>
+        </div>
+        <div class="content_box">
+            <ul class="content">
+                <li class="content_title">
+                    <ul class="content_title_list">
+                        <li class="contract_no">合同编号</li>
+                        <li class="contract_name">合同名称</li>
+                        <li class="party_a">甲方</li>
+                        <li class="party_b">乙方</li>
+                        <li class="start_time">发起时间</li>
+                        <li class="status">合同状态</li>
+                        <li class="operate">操作</li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail detail_list_current">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status  status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status  status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status status_off">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status status_off">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status  status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status  status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_detail">
+                    <ul class="content_detail_list">
+                        <li class="contract_no">12121212</li>
+                        <li class="contract_name">生产设备采购项目</li>
+                        <li class="party_a">飞龙信息发展股份有限公司</li>
+                        <li class="party_b">大全集团有限公司</li>
+                        <li class="start_time">2017-05-15</li>
+                        <li class="status  status_on">已签署</li>
+                        <li class="operate"><span class="check_contract">查看合同</span></li>
+                    </ul>
+                </li>
+                <li class="content_pagination">
+                    <ul class="pagination">
+                        <li class="pagination_prev"><a></a></li>
+                        <li class="pagination_item pagination_current"><a>1</a></li>
+                        <li class="pagination_item"><a>2</a></li>
+                        <li class="pagination_item"><a>3</a></li>
+                        <li class="pagination_item"><a>4</a></li>
+                        <li class="pagination_item"><a>5</a></li>
+                        <li class="pagination_jump_next"><a></a></li>
+                        <li class="pagination_item"><a>50</a></li>
+                        <li class="pagination_next"><a></a></li>
+                        <li class="pagination_quick_jump">Goto<input type="text" value="2">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="service">
