--- a/contract_management.html
+++ b/contract_management.html
@@ -10,9 +10,9 @@
 <div class="header">
     <div class="wrapper">
         <div class="loginLeft">
-            <span id="login">"xuedan100.com"</span>
+            <span id="login_id">"xuedan100.com"</span>
             <span id="log_state">[退出]</span>
-            <span id="loginHi">您好,欢迎来到飞龙签约平台</span>
+            <span id="login_hi">您好,欢迎来到飞龙签约平台</span>
         </div>
     </div>
 </div>
