--- a/contract_management.html
+++ b/contract_management.html
@@ -50,11 +50,11 @@
                 </li>
                 <li class="content_detail">
                     <ul class="content_detail_list">
-                        <li class="contract_no">12121212</li>
-                        <li class="contract_name"><a href="#">生产设备采购项目</a></li>
-                        <li class="party_a">飞龙信息发展股份有限公司</li>
-                        <li class="party_b">大全集团有限公司</li>
-                        <li class="start_time">2017-05-15</li>
+                        <li class="contract_no">121212121212121212121212121212121212121212121212</li>
+                        <li class="contract_name"><a href="#">生产设备采购项目生产设备采购项目</a></li>
+                        <li class="party_a">飞龙信息发展股份有限公司生产设备采购项目</li>
+                        <li class="party_b">大全集团有限公司生产设备采购项目</li>
+                        <li class="start_time">2017-05-15生产设备采购项目</li>
                         <li class="status status_on">已签署</li>
                         <li class="operate"><a class="check_contract" href="#">查看合同</a></li>
                     </ul>
